[package]
name = "saks"
version = "0.1.1"
authors = ["wuaoxiang <os.popen@gmail.com>"]
edition = "2018"
description = "Swiss Army Knife Shield for Raspberry Pi"
keywords = ["gpio", "rpi", "raspberrypi", "arm", "embedded"]
categories = ["raspberrypi", "embedded", "gpio"]
repository = "https://github.com/pymongo/saks"
documentation = "https://docs.rs/saks"
homepage = "https://docs.rs/saks"
readme = "README.md"
license = "MIT"

[dependencies]
libc = "0.2"
